# SBDailyHabits

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: log4rs.yaml
scripts/: run.sh  setup.sh
src/: config.rs  daily_habits.rs  daily_tracking.rs  error.rs  habits_md.rs  lib.rs  main.rs  notion_client.rs
tests/: notion_integration.rs
