[package]
name = "sb-daily-habits"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20.1"
serde_json = "1.0.128"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
chrono = "0.4.38"
thiserror = "1.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
temp-env = "0.3"
